AC_INIT(src/LogEngine.cpp)

AM_INIT_AUTOMAKE(LogEngine, 1.02)
AM_CONFIG_HEADER(config.h)

dnl AC_CANONICAL_SYSTEM
AC_PROG_CC
AC_PROG_CPP
AC_PROG_CXX
AC_PROG_INSTALL
AC_PROG_LIBTOOL

CXXFLAGS="$CXXFLAGS -pthread "
AC_LANG(C++)
AC_CACHE_CHECK(whether $CXX accepts -pthread, ac_cv_prog_cc_pthread,
	[AC_COMPILE_IFELSE([int a = 1;], [ac_cv_prog_cc_pthread=yes],
		[ac_cv_prog_cc_pthread=no])])
		
if test "$ac_cv_prog_cc_pthread" = no; then
	AC_MSG_ERROR([Pthread support in compiler is not available])
fi

AC_CHECK_HEADERS([stdlib.h stdio.h fcntl.h sys/stat.h sys/io.h unistd.h pthread.h stdarg.h])
AC_CHECK_FUNC(c, strcasecmp, [AC_DEFINE([HAVE_STRCASECMP], 1, [Define is you have strcasecmp function.])])

AC_OUTPUT(Makefile include/Makefile src/Makefile test/Makefile)
